test/good/functions/func06.px

a = [2, 4]

func get() [Int] def
    return a

get()[1] -= 7
print a[0], a[1]
