test/bad/functions/return2.px

func f() String def
    return

func main() Int def
    return 0
